@@ -85,12 +85,8 @@ public class FullExportForm extends Form {
 	}
 
 	@Override
-	public Set<ManagedExecution<?>> collectRequiredQueries() {
-		if (queryGroup == null) {
-			return Collections.emptySet();
-		}
-
-		return Set.of(queryGroup);
+	public Set<ManagedExecutionId> collectRequiredQueries() {
+		return Set.of(queryGroupId);
 	}
 
 	@Override
